# test_action

./: .gitignore  DEPLOY_GUIDE.html  Makefile  README.md  cli.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: ai_bug_fix.yml
.github/scripts/: ai_client.py  ai_fix_issue.py  ai_fix_review.py  ai_review_pr.py  ai_triage_issue.py
.github/workflows/: ai-auto-coder.yml  ai-auto-fix.yml  ai-clarify.yml  ai-code-review.yml  ai-fix-review.yml  ai-issue-triage.yml  publish-to-pypi.yml
minesweeper/: index.html
