[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "test-action-ai"
version = "0.1.0"
description = "AI-powered GitHub Actions workflows"
requires-python = ">=3.10"
dependencies = [
    "anthropic",
    "openai",
]

[tool.setuptools.packages.find]
where = [".github/scripts"]
include = ["*"]
